2004/09/09 13:53 (+0200) kaffeetisch

	* NEWS: Fix an error.

	* t/Rsvg.t, t/window.svg: Work around a librsvg bug by using
	<title> and <desc> tags.

2004/07/24 19:34 (+0200) kaffeetisch

	* NEWS, Rsvg.pm: Version 0.03.

2004/07/24 19:29 (+0200) kaffeetisch

	* t/Rsvg.t: Make the tests work on older versions of librsvg.

2004/07/23 21:13 (+0200) kaffeetisch

	* t/Rsvg.t
	* xs/Rsvg.xs: Bind and test rsvg_set_default_dpi_x_y and
	rsvg_handle_set_dpi_x_y.  Make using gzip'ed SVGs work by allowing
	\0s in the data passed to Gnome2::Rsvg::Handle::write.

	* xs/Rsvg.xs: undef RSVG_DISABLE_DEPRECATED to make sure we get
	some functions that were deprecated.

2004/06/14 19:34 (+0200) kaffeetisch

	* t/Rsvg.t
	* xs/Rsvg.xs: Bind and test Gnome2::Rsvg::Handle::get_title and
	get_desc.

2004/06/05 00:49 (+0200) kaffeetisch

	A NEWS
	* MANIFEST
	* README
	* Rsvg.pm: Version 0.02.

2004/05/17 18:03 (+0200) kaffeetisch

	* rsvg2perl.h: Only include <librsvg/rsvg-gz.h> if it's available.

	* t/Rsvg.t: Be a bit more tolerant to pass on older versions.
	Skip some tests if they're not available in the version we're
	compiling against.

	* xs/Rsvg.xs: Implement CHECK_VERSION and GET_VERSION_INFO.
	Protect set_default_dpi, *_ex, new_gz, and set_dpi with version
	macros.

2004/02/14 16:39 (+0100) kaffeetisch

	A copyright.pod
	* Makefile.PL: Switch to the new EU::Depends and ::PkgConfig
	versions.

2004/01/27 20:56 (+0100) kaffeetisch

	* README
	* Rsvg.pm: Strip the "Raster" in "Raster Scalable Vector
	Graphics".

2004/01/24 21:44 (-0500) rwmcfa1

	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
	trick

	* perl-Gnome2-Rsvg.spec.in: use pkg-config for Requires version

2004/01/02 15:09 (-0500) rwmcfa1

	* Makefile.PL: rpm stuff added

	* perl-Gnome2-Rsvg.spec.in: initial import

2003/12/29 03:19 (+0100) kaffeetisch

	* t/Rsvg.t
	* xs/Rsvg.xs: Enable Gnome2::Rsvg::new_gz.  Still untested because
	it doesn't seem to work.

2003/12/25 02:41 (+0100) kaffeetisch
